smart-home/homeassistant.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
  namespace: smart-home
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: homeassistant
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeSelector:
        disktype: usb
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-pvc-config
      hostNetwork: true
      containers:
        - image: ghcr.io/home-assistant/raspberrypi4-64-homeassistant:2026.1.3
          imagePullPolicy: Always
          name: homeassistant
          ports:
            - containerPort: 8123
              name: webui
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config
      restartPolicy: Always
