smart-home/clawdbot.service.yml
apiVersion: v1
kind: Service
metadata:
  name: clawdbot
  labels:
    app: clawdbot
  namespace: smart-home
spec:
  selector:
    app: clawdbot
  ports:
    - port: 18789
      protocol: TCP
      targetPort: 18789
      name: ui
