smart-home/homeassistant.service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
  namespace: smart-home
spec:
  selector:
    app: homeassistant
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
      name: webui
