smart-home/mosquitto.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
  namespace: smart-home
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      protocol: TCP
      targetPort: 1883
      name: mqtt
