smart-home/clawdbot.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-home
  name: clawdbot
spec:
  rules:
  - host: clawdbot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clawdbot
            port:
              name: ui
