smart-home/homeassistant.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-home
  name: homeassistant
spec:
  rules:
  - host: arloz.dahan.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              name: webui
