smart-home/mosquitto.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-home
  name: mosquitto
spec:
  rules:
  - host: mqtt.arloz.dahan.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto
            port:
              name: mqtt
